[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "brockman-api"
description = "brockman api"
version = "1.0.0"
authors = [{ name = "lassulus", email = "art@lassul.us" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Topic :: Utilities",
  "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/lassulus/brockman-api"

[project.scripts]
brockman-api = "brockman_api.server:main"

[tool.setuptools]
packages = ["brockman_api"]

[tool.ruff]
target-version = "py312"
line-length = 88

select = ["E", "F", "I", "U"]
ignore = [ "E501" ]

[tool.mypy]
python_version = "3.12"
pretty = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true
